<resources>
    <string name="app_name">MyCalculator1</string>
    <string name="displayText">MyCalculator1</string>
    <string name="Add">+</string>
    <string name="Subtract">-</string>
    <string name="Multiply">x</string>
    <string name="Divide">/</string>
    <string name="invalidInput">Please provide a valid number input here</string>
    <string name="invalidOperand">Error: Division by 0 is not allowed</string>
    <string name="Modulus">%</string>
    <string name="Mod">%</string>
    <string name="applicationName">MyCalculator</string>
</resources>