<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:alpha="1"
    android:background="@drawable/background_calculator"
    android:backgroundTint="#95FFFFFF"
    android:backgroundTintMode="src_over">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"

        android:orientation="vertical">

        <TextView
            android:id="@+id/TvSimpleCalculator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="30dp"
            android:background="#3F51B5"
            android:fontFamily="sans-serif-black"
            android:gravity="center"
            android:padding="24dp"
            android:text="Simple Calculator"
            android:textColor="@android:color/white"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/TvResutWindow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="#97FF9800"
            android:capitalize="words"
            android:hint="Result will be displayed here"
            android:padding="24dp"
            android:textAlignment="center"
            android:textColor="#FD0000"
            android:textSize="20sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/EtPlain_text_input1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#000000"
            android:inputType="text"
            android:padding="24dp"
            android:textColor="#000000"
            tools:text=" " />

        <EditText
            android:id="@+id/EtPlain_text_input2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:backgroundTint="#000000"
            android:inputType="text"
            android:padding="24dp"
            android:textColor="#FF000000" />

        <LinearLayout
            android:id="@+id/Ltoperation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <Button
                android:id="@+id/BtnAdd"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Add" />

            <Button
                android:id="@+id/BtnSubtract"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Subtract" />

            <Button
                android:id="@+id/BtnMultiple"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Multiply" />

            <Button
                android:id="@+id/BtnDivide"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Divide" />

            <Button
                android:id="@+id/BtnMod"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/Mod" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>